# Junction2025_GoldenTales

./: AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: README.md  pyproject.toml  requirements.txt  storycircle.db
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  admin.py  conversations.py  stories.py
backend/app/services/: __init__.py  elevenlabs.py  security.py  storage.py
backend/app/tests/: conftest.py  test_stories.py
scripts/: dev.sh
src/: App.tsx  index.css  vite-env.d.ts
src/components/: ConvaiWidget.tsx  RecordingScreen.tsx  ReviewScreen.tsx  SettingsScreen.tsx  ShareConfirmationScreen.tsx  StoryDetailScreen.tsx  StoryWallScreen.tsx  WelcomeScreen.tsx
src/components/ui/: orb.tsx
src/lib/: env.ts  mockData.ts
src/styles/: globals.css
