[tool.poetry]
name = "storycircle-backend"
version = "0.1.0"
description = "FastAPI backend for the StoryCircle hackathon prototype."
authors = ["StoryCircle Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.110.0"
uvicorn = { extras = ["standard"], version = "0.30.1" }
sqlmodel = "0.0.22"
sqlalchemy = "2.0.30"
pydantic-settings = "2.2.1"
python-multipart = "0.0.9"
httpx = "0.27.0"
python-dotenv = "1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pytest-cov = "5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
